--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -147,7 +147,7 @@
                     " class="pAnimate zoomindown animation-duration-1000 animation-ease-out">
                     <div>
                         <p style="text-align: center; margin-top: 10px">
-                            NO. OF STUDENTS
+                            NO. OF COURSES
                         </p>
                         <div style="
                                 display: flex;
@@ -183,7 +183,7 @@
                     " class="pAnimate zoomindown animation-duration-1000 animation-ease-out">
                     <div>
                         <p style="text-align: center; margin-top: 10px">
-                            NO. OF ADMINS
+                            ATTENDANCE
                         </p>
                         <div style="
                                 display: flex;
@@ -198,8 +198,8 @@
                                 font-weight: bold;
                                 font-size: 25px;
                                 color: #ef4444;
-                            ">1</P>
-                        <P style="text-align: center">In our school as of
+                            ">90%</P>
+                        <P style="text-align: center">In our class as of
                             <span style="color: #008000">Jul 2023</span>
                         </P>
                     </div>
@@ -242,7 +242,7 @@
             <div style="width: 100%; height: 300px; margin-top: 20px">
                 <canvas width="500" #mychart></canvas>
             </div>
-            <div class="card" style="width: 50%;margin-top: 40px;">
+            <!--<div class="card" style="width: 50%;margin-top: 40px;">
                 <p-table [value]="products" responsiveLayout="scroll" [paginator]="true" [rows]="5" [responsive]="true">
                     <ng-template pTemplate="header">
                         <tr>
@@ -266,10 +266,10 @@
                         </tr>
                     </ng-template>
                 </p-table>
-            </div>
+            </div>-->
 
         </div>
-        <div style="height: 620px;  margin-left: 20px;width:320px;">
+        <!--<div style="height: 620px;  margin-left: 20px;width:320px;">
             <div
                 style="width: 100%; height: 310px; border-radius:14px;border: 1px solid #dfe7ef;background-color: white;">
                 <div style="display: flex;justify-content: center;margin-top: 10%;">
@@ -300,7 +300,7 @@
 
 
 
-    </div>
+    </div>-->
 
 
 
@@ -342,4 +342,4 @@
     </div> -->
 
 </div>
-<p-scrollTop [threshold]="10"></p-scrollTop>
+<!--<p-scrollTop [threshold]="10"></p-scrollTop>-->
